attempt 6: fix spacing on notched devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,9 @@
 html, body {
   padding: 0;
+  padding-top: env(safe-area-inset-top, 20px);
+  padding-bottom: env(safe-area-inset-bottom, 20px);
+  padding-left: env(safe-area-inset-left, 20px);
+  padding-right: env(safe-area-inset-right, 20px);
   margin: 0;
   width: 100vw;
   height: 100vh;
